# recursive-stwo-fork

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cairo-components/hints/: Cargo.toml
cairo-components/hints/src/: answer.rs  composition.rs  decommitment.rs  fiat_shamir.rs  folding.rs  lib.rs
cairo-components/hints/src/decommitment/: composition.rs  interaction.rs  preprocessed.rs  trace.rs  utils.rs
cairo-components/interface/: Cargo.toml
cairo-components/interface/src/: lib.rs
cairo-components/recursive/answer/: Cargo.toml
cairo-components/recursive/answer/src/: data_structures.rs  lib.rs
cairo-components/recursive/answer/src/data_structures/: preprocessed.rs
cairo-components/recursive/composition/: Cargo.toml
cairo-components/recursive/composition/src/: data_structures.rs  lib.rs
cairo-components/recursive/composition/src/components/: memory_address_to_id.rs  memory_id_to_big.rs  mod.rs  range_check_builtin_bits_128.rs  verify_instruction.rs
cairo-components/recursive/composition/src/components/blake/: blake_g.rs  blake_round.rs  blake_round_sigma.rs  mod.rs  triple_xor_32.rs  verify_bitwise_xor_12.rs
cairo-components/recursive/composition/src/components/opcodes/: add_ap_opcode.rs  add_opcode.rs  add_opcode_small.rs  assert_eq_opcode.rs  assert_eq_opcode_double_deref.rs  assert_eq_opcode_imm.rs  blake_compress_opcode.rs  call_opcode_abs.rs  call_opcode_rel_imm.rs  jnz_opcode_non_taken.rs  jnz_opcode_taken.rs  jump_opcode_rel.rs  jump_opcode_rel_imm.rs  mod.rs  mul_opcode.rs  mul_opcode_small.rs  qm_31_add_mul_opcode.rs  ret_opcode.rs
cairo-components/recursive/composition/src/components/range_checks/: mod.rs  range_check_11.rs  range_check_12.rs  range_check_18.rs  range_check_18_b.rs  range_check_20.rs  range_check_20_b.rs  range_check_20_c.rs  range_check_20_d.rs  range_check_20_e.rs  range_check_20_f.rs  range_check_20_g.rs  range_check_20_h.rs  range_check_3_3_3_3_3.rs  range_check_3_6_6_3.rs  range_check_4_3.rs  range_check_4_4.rs  range_check_4_4_4_4.rs  range_check_5_4.rs  range_check_6.rs  range_check_7_2_5.rs  range_check_8.rs  range_check_9_9.rs  range_check_9_9_b.rs  range_check_9_9_c.rs  range_check_9_9_d.rs  range_check_9_9_e.rs  range_check_9_9_f.rs  range_check_9_9_g.rs  range_check_9_9_h.rs
cairo-components/recursive/composition/src/components/subroutines/: bitwise_xor_num_bits_12.rs  bitwise_xor_num_bits_4.rs  bitwise_xor_num_bits_7.rs  bitwise_xor_num_bits_8.rs  bitwise_xor_num_bits_8_b.rs  bitwise_xor_num_bits_9.rs  cond_range_check_2.rs  create_blake_output.rs  create_blake_round_input.rs  decode_blake_opcode.rs  decode_instruction_15a61.rs  decode_instruction_161c9.rs  decode_instruction_2a7a2.rs  decode_instruction_3802d.rs  decode_instruction_472fe.rs  decode_instruction_4b8cf.rs  decode_instruction_7ebc4.rs  decode_instruction_ba944.rs  decode_instruction_bc3cd.rs  decode_instruction_cb32b.rs  decode_instruction_d2a10.rs  decode_instruction_de75a.rs  decode_instruction_f1edd.rs  decode_instruction_fe864.rs  decode_small_sign.rs  double_karatsuba_1454b.rs  encode_offsets.rs  mem_verify.rs  mem_verify_equal.rs  mod.rs  qm_31_read_reduced.rs  range_check_ap.rs  range_check_last_limb_bits_in_ms_limb_2.rs  read_id.rs  read_positive_known_id_num_bits_128.rs  read_positive_known_id_num_bits_144.rs  read_positive_known_id_num_bits_252.rs  read_positive_known_id_num_bits_29.rs  read_positive_known_id_num_bits_36.rs  read_positive_known_id_num_bits_72.rs  (+16 more)
cairo-components/recursive/composition/src/components/verify_bitwise/: mod.rs  verify_bitwise_xor_4.rs  verify_bitwise_xor_7.rs  verify_bitwise_xor_8.rs  verify_bitwise_xor_8_b.rs  verify_bitwise_xor_9.rs
cairo-components/recursive/data_structures/: Cargo.toml
cairo-components/recursive/data_structures/src/: claim.rs  data_structures.rs  evaluator.rs  fiat_shamir.rs  interaction_claim.rs  lib.rs  lookup.rs  mask.rs  public_data.rs  stark_proof.rs  utils.rs
cairo-components/recursive/decommitment/: Cargo.toml
cairo-components/recursive/decommitment/src/: data_structures.rs  lib.rs  utils.rs
cairo-components/recursive/decommitment/src/data_structures/: composition.rs  interaction.rs  preprocessed.rs
cairo-components/recursive/fiat_shamir/: Cargo.toml
cairo-components/recursive/fiat_shamir/src/: lib.rs
cairo-components/recursive/folding/: Cargo.toml
cairo-components/recursive/folding/src/: lib.rs
cairo-components/test_data/: recursive_proof.bin.bz
components/hints/src/: answer.rs  decommit.rs  fiat_shamir.rs  folding.rs
components/recursive/answer/src/: data_structures.rs  lib.rs
components/recursive/composition/src/: lib.rs
components/recursive/data_structures/src/: lib.rs
components/recursive/fiat_shamir/src/: lib.rs
components/recursive/folding/src/: lib.rs
constraint_system/src/: lib.rs  plonk_with_poseidon.rs  var.rs
doc/: TODO.md  answer.md  conditional_channel_mixer.md  formality_check.md  progress.md  public_input.md
examples/data/: output_hash.txt
examples/multi-proofs/: Cargo.toml
examples/multi-proofs/src/: main.rs
examples/reduction/: Cargo.toml
examples/reduction/src/: main.rs
primitives/: Cargo.toml
primitives/bits/src/: lib.rs
primitives/circle/src/: lib.rs
primitives/fields/: Cargo.toml
primitives/fields/src/: lib.rs  m31.rs
primitives/merkle/: Cargo.toml
primitives/merkle/src/: lib.rs
primitives/poseidon31/: Cargo.toml
primitives/poseidon31/src/: lib.rs
primitives/src/: bits.rs  channel.rs  circle.rs  cm31.rs  fields.rs  lib.rs  line.rs  m31.rs  merkle.rs  oblivious_map.rs  option.rs  poseidon31.rs  qm31.rs  query.rs
primitives/src/poseidon31/: implementation.rs  parameters.rs
