[package]
name = "circle-plonk-dsl-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
stwo-constraint-framework.workspace = true
circle-plonk-dsl-constraint-system = { path = "../constraint_system" }
num-traits.workspace = true
rand.workspace = true
itertools.workspace = true
indexmap.workspace = true