[package]
name = "cairo-plonk-dsl-hints"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
stwo-constraint-framework.workspace = true
num-traits.workspace = true
itertools.workspace = true
cairo-air.workspace = true
stwo-cairo-common.workspace = true
indexmap.workspace = true

[dev-dependencies]
bincode.workspace = true