[package]
name = "cairo-plonk-dsl-example-multi-proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
circle-plonk-dsl-composition = { path = "../../components/recursive/composition" }
circle-plonk-dsl-answer = { path = "../../components/recursive/answer" }
circle-plonk-dsl-hints = { path = "../../components/hints" }
circle-plonk-dsl-folding = { path = "../../components/recursive/folding" }
circle-plonk-dsl-data-structures = { path = "../../components/recursive/data_structures" }
circle-plonk-dsl-fiat-shamir = { path = "../../components/recursive/fiat_shamir" }
stwo.workspace = true
stwo-examples.workspace = true
bincode.workspace = true
circle-plonk-dsl-constraint-system = { path = "../../constraint_system" }
circle-plonk-dsl-primitives = { path = "../../primitives" }
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true