[package]
name = "cairo-plonk-dsl-example-reduction"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
bincode.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
cairo-air.workspace = true
circle-plonk-dsl-constraint-system = { path = "../../constraint_system" }
cairo-plonk-dsl-interface = { path = "../../cairo-components/interface" }
circle-plonk-dsl-primitives = { path = "../../primitives" }
cairo-plonk-dsl-data-structures = { path = "../../cairo-components/recursive/data_structures" }