[package]
name = "circle-plonk-dsl-merkle"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
circle-plonk-dsl-fields = { path = "../fields" }
circle-plonk-dsl-constraint-system = { path = "../../constraint_system" }
circle-plonk-dsl-poseidon31 = { path = "../poseidon31" }
circle-plonk-dsl-bits = { path = "../bits" }
num-traits.workspace = true

[dev-dependencies]
rand.workspace = true