[package]
name = "circle-plonk-dsl-poseidon31"
version = "0.1.0"
edition = "2021"

[dependencies]
circle-plonk-dsl-constraint-system = { path = "../../constraint_system" }
stwo.workspace = true
stwo-examples.workspace = true
num-traits.workspace = true
circle-plonk-dsl-fields = { path = "../fields" }
circle-plonk-dsl-bits = { path = "../bits" }