[package]
name = "cairo-plonk-dsl-composition"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
stwo-cairo-common.workspace = true
cairo-plonk-dsl-hints = { path = "../../hints" }
circle-plonk-dsl-primitives = { path = "../../../primitives" }
circle-plonk-dsl-constraint-system = { path = "../../../constraint_system" }
cairo-plonk-dsl-data-structures = { path = "../data_structures" }
bincode.workspace = true
num-traits.workspace = true
cairo-air.workspace = true
stwo-constraint-framework.workspace = true